--- a/Galeria.html
+++ b/Galeria.html
@@ -17,8 +17,8 @@ MM_reloadPage(true);
 </head>
 
 <body>
-<div id="Layer1" style="position:absolute; left:43px; top:45px; width:202px; height:254px; z-index:1"><img src="Programacion%20web%202/chimuelo.jpg" width="201" height="251"></div>
-<div id="Layer2" style="position:absolute; left:311px; top:59px; width:276px; height:182px; z-index:2"><img src="Programacion%20web%202/juntos.jpg" width="275" height="183"></div>
-<div id="Layer3" style="position:absolute; left:179px; top:326px; width:363px; height:160px; z-index:3"><img src="Programacion%20web%202/Critica.jpg" width="362" height="161"></div>
+<div id="Layer1" style="position:absolute; left:43px; top:45px; width:202px; height:254px; z-index:1"><img src="chimuelo.jpg" width="201" height="251"></div>
+<div id="Layer2" style="position:absolute; left:311px; top:59px; width:276px; height:182px; z-index:2"><img src="juntos.jpg" width="275" height="183"></div>
+<div id="Layer3" style="position:absolute; left:179px; top:326px; width:363px; height:160px; z-index:3"><img src="Critica.jpg" width="362" height="161"></div>
 </body>
 </html>
